--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div id="lottie-hover" style="width: 200px; height: 60px; cursor: pointer;"></div>
           
           <div class="w-layout-blockcontainer menu w-container">
-            <a href="#" class="button-2 w-button">About us</a>
+            <a href="#about-us" class="button-2 w-button">About us</a>
             <a href="#" class="button-2 w-button">Products</a>
             <a href="#" class="button-2 w-button">Contacts</a>
             <a href="#" class="button-2 w-button">Reviews</a>
@@ -71,7 +71,7 @@
           <video src="video/videoplayback (2).mp4" autoplay muted loop playsinline></video>
         </section>
 
-        <section class="about-us">
+        <section id="about-us" class="about-us">
           <div class="w-layout-blockcontainer container-4 w-container">
             <div class="w-layout-blockcontainer container-5 w-container">
               <div class="w-layout-blockcontainer w-container">
@@ -91,6 +91,10 @@
              </div>
           </div>
         </section>
+
+        <div class="blob-cursor">
+          <span class="blob-text">Play</span>
+        </div>
 
         <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=633fed1628f7af3a6057040b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="js/webflow.js" type="text/javascript"></script>
